--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+    <h1>Login Form</h1>
+
+    <form id="loginForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" placeholder="Username">
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" placeholder="Password">
+		
+           <label for="checkbox">
+            <input type="checkbox" id="checkbox"> Remember me:
+        </label>
+        
+
+        <input type="submit" id="submit" value="Submit">
+    </form>
+
+    <button id="existing" style="display: none;">Login as existing user</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
