--- a/main.html
+++ b/main.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,25 +6,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-
-    <h1>Login Form</h1>
-
-    <form id="loginForm">
-        <label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Username">
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password">
-		
-           <label for="checkbox">
-            <input type="checkbox" id="checkbox"> Remember me:
-        </label>
-        
-
-        <input type="submit" id="submit" value="Submit">
-    </form>
-
-    <button id="existing" style="display: none;">Login as existing user</button>
+	<form id="form1" onsubmit="getFormvalue()">
+		<label>First Name: </label><input type="text" id="fname">
+		<br><label>Last Name:</label> <input type="text" id="lname">
+<br><label>Phone Number: </label><input type="number" id="phno">
+		<br><label>Email-ID:</label> <input type="text" id="email">
+		<br><button type="submit">Submit</button>
+	</form>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
