--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -5,15 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<form id="form1" onsubmit="getFormvalue()">
-		<label>First Name: </label><input type="text" id="fname">
-		<br><label>Last Name:</label> <input type="text" id="lname">
-<br><label>Phone Number: </label><input type="number" id="phno">
-		<br><label>Email-ID:</label> <input type="text" id="email">
-		<br><button type="submit">Submit</button>
-	</form>
-	</form>
+	<form class="info">
+        <label for="name">First Name:</label>
+        <input type="text" name="First Name" id="fname" required><br>
+        <label for="lname">Last Name:</label>
+        <input type="text" name="Last Name" id="lname" required><br>
+        <label for="phone">Phone Number:</label>
+        <input type="tel" name="Phone Number" id="phone" required><br>
+        <label for="email">Email ID:</label>
+        <input type="email" name="Email ID" id="email" required><br>
+        <input type="submit" value="Submit">
+        </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
